Revision history for perl distribution Convos

8.01 Not Released
 - Changed appearance for the main menu toggles
 - Fix not hiding the main menu when toggling the main menu sections
 - Fix not showing "0" notifications counter
 - Fix annoying animation when searching for conversations
 - Fix rendering of notifications

8.00 2023-10-26T21:30:00+0900
 - Add collapsible sidebar sections #840
   Contributor: Claudiu Ciungan
 - Add Romanian translation,
   Contributor: mostlyvirtual
 - Add support for CONVOS_LOCAL_ADDRESS
 - Build docker images to ghcr instead of docker hub
 - Fix some A11y warnings after upgrading to Svelte 4
 - Upgrade Svelte 3 to Svelte 4
 - Upgrade JavaScript dependencies

7.16 2023-10-18T13:55:00+0900
  - Test release to see if docker images was built correctly

7.15 2023-01-11T12:50:00+0900
 - Fix invalid assets names

7.14 2023-01-11T12:37:00+0900
 - Fix throwing LDAP error on invalid email or password
 - Fix not prefixing contact info with "mailto:" #813
 - Add support for URLs in contact info #813
 - Changed to using Makefile.PL instead of cpanfile #810
 - Changed to system emojis after twemoji.maxcdn.com was shut down #818
 - Changed "convos install --prod" to "convos install --core"
 - Bumped dependencies

7.13 2022-11-07T23:12:00+0900
 - Fix bug in the build process

7.12 2022-11-07T12:44:00+0900
 - Fix showing user list on small screens
 - Changed usermodes to be actual words instead of symbols

7.11 2022-11-07T08:26:00+0900
 - Fix not rendering all embeds as paste
 - Fix rendering user mode "q"
 - Fix showing details embed, even when messages are displayed as raw

7.10 2022-11-01T13:41:00+0900
 - Fix not rendering embeds when raw messages is selected
 - Fix internal links in the chat are clickable #799
 - Add max-height to embedded videos #801
 - Removed max-height on public file preview #802

7.09 2022-10-30T07:58:00+0900
 - Fix listing users
 - Fix getting to "Account" form for a user
 - Change type for user "uid" to a string
